namespace/deployment.yaml
# deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: team-helm
  namespace: team-helm
spec:
  replicas: 3
  selector:
    matchLabels:
      app: team-helm
  template:
    metadata:
      labels:
        app: team-helm
    spec:
      containers:
      - name: team-helm-container
      ### Needs the app image tag
        image: your-application-image:tag
        ports:
        - containerPort: 80
